--- a/_posts/2020-05-13-herewego.markdown
+++ b/_posts/2020-05-13-herewego.markdown
@@ -4,7 +4,7 @@ title:  "Here we go"
 categories: Project Euler
 ---
 # Here we go
-This is really simply an inaugural post to test out the static rendering of blog posts, but I'll try to still make it interesting and worth reading by going over an easy [Project Euler](https://projecteuler.net) problem. Specifically the first problem which is relatively simple. If you're not familiar with Project Euler, the link above will give you a pretty good overview, but in short it's a series of challenging mathematical problemsthat you are encouraged to solve through the use of programming and computer science techniques. I love both mathematics and computer science almost equally (I studied pure/theoretical math before switching to computer science), so I have a lot of fun solving these. I'll probably end up posting more solutions and explanations in the future, as I've solved quite a few of these. The first few problems aren't particularly hard, but they make for a decent first foot forward with a new blog, perhaps. Spoilers ahead, obviously, if you want to solve these on your own without seeing a potential solution. I've chosen (thus far) to use Python 3 solve these problems--it's not a fast language, of course, but it has nice, headache free support of very large numbers (useful in solving some of these problems) baked into it, and the fast and loose scripting style is good for one off problems like this.
+This is really simply an inaugural post to test out the static rendering of blog posts, but I'll try to still make it interesting and worth reading by going over an easy [Project Euler](https://projecteuler.net) problem. Specifically the first problem, which is relatively simple. If you're not familiar with Project Euler the link above will give you a pretty good overview, but the short explanation is that it's a series of challenging mathematical problems that you are encouraged to solve through the use of programming and computer science techniques. I love both mathematics and computer science almost equally (I studied pure/theoretical math before switching to computer science), so I have a lot of fun solving these. I'll probably end up posting more solutions and explanations in the future, as I've solved quite a few of these. The first few problems aren't particularly hard, but they make for a decent first foot forward with a new blog, perhaps. Spoilers ahead, obviously, if you want to solve these on your own without seeing a potential solution. I've chosen (thus far) to use Python 3 solve these problems. It's not a fast language, of course, but it has nice, headache free support of very large numbers (useful in solving some of these problems) baked into it, and the fast and loose scripting style is good for one off problems like this.
 
 # Problem 1: Find the sum of all the multiples of 3 or 5 below 1000
 
